fix: update version to 1.0.2 and enhance color inversion for fitfiletools.com dark mode

--- a/fitfiletools-darkmode.user.css
+++ b/fitfiletools-darkmode.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           fitfiletools.com - Dark Mode
 @namespace      typpi.online
-@version        1.0.1
+@version        1.0.2
 @description    Dark theme for fit file tools
 @author         Nick2bad4u
 @license        UnLicense
@@ -11,6 +11,7 @@
 @-moz-document domain("fitfiletools.com") {
 	/* Invert colors except images and videos */
 	:is(html:not([stylus-iframe]), img, svg, video) {
+		-webkit-filter: invert(1) hue-rotate(180deg) !important;
 		filter: invert(1) hue-rotate(180deg) !important;
 	}
 }
